@@ -1,5 +1,5 @@
 //---------------------------------------------------------------------------------------
-//  $Id: $
+//  $Id$
 //  Copyright (c) 2009 by Mulle Kybernetik. See License file for details.
 //---------------------------------------------------------------------------------------
 
@@ -7,8 +7,11 @@
 
 @interface OCObserverMockObject : NSObject 
 {
-	NSMutableArray *recorders;
+	BOOL			expectationOrderMatters;
+	NSMutableArray	*recorders;
 }
+
+- (void)setExpectationOrderMatters:(BOOL)flag;
 
 - (id)expect;
 
